[FIX] 오류 수정