@@ -1,16 +1,20 @@
 package com.soptie.server.routine.controller.happiness.dto;
 
-import com.soptie.server.routine.entity.happiness.HappinessTheme;
+import com.soptie.server.routine.service.happiness.dto.HappinessThemesServiceResponse;
 import lombok.Builder;
 import lombok.NonNull;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record HappinessThemesResponse(
         @NonNull List<HappinessThemeResponse> themes
 ) {
-    public static HappinessThemesResponse of(List<HappinessTheme> themes) {
-        return new HappinessThemesResponse(themes.stream().map(HappinessThemeResponse::of).toList());
+    public static HappinessThemesResponse of(HappinessThemesServiceResponse response) {
+        List<HappinessThemeResponse> themeResponses = response.themes().stream()
+                .map(HappinessThemeResponse::of)
+                .collect(Collectors.toList());
+        return new HappinessThemesResponse(themeResponses);
     }
 
     @Builder
@@ -18,11 +22,8 @@ public record HappinessThemesResponse(
             long themeId,
             @NonNull String name
     ) {
-        private static HappinessThemeResponse of(HappinessTheme theme) {
-            return HappinessThemeResponse.builder()
-                    .themeId(theme.getId())
-                    .name(theme.getName())
-                    .build();
+        public static HappinessThemeResponse of(HappinessThemesServiceResponse.HappinessThemeResponse response) {
+            return new HappinessThemeResponse(response.themeId(), response.name());
         }
     }
 }
